--- a/package.json
+++ b/package.json
@@ -2,15 +2,18 @@
   "name": "react-reflection-board",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:5000",
+  "proxy": "http://localhost:5004",
   "dependencies": {
     "axios": "^0.21.1",
     "express": "^4.17.1",
     "pg": "^8.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "redux": "^4.2.1",
+    "redux-logger": "^3.0.6"
   },
   "devDependencies": {
     "nodemon": "^1.18.5"
